# IELTSLISA_ZaloApp_User/Repositories/Entities/User.cs
@@ -11,6 +11,8 @@ public partial class User
 
     public string? Phone { get; set; }
 
+    public bool? IsConfirmed { get; set; }
+
     public virtual ICollection<Concern> Concerns { get; set; } = new List<Concern>();
 
     public virtual ICollection<UserVoucher> UserVouchers { get; set; } = new List<UserVoucher>();
